Stats: fix misaligned numbers in Insights modules

--- a/assets/stylesheets/sections/_stats.scss
+++ b/assets/stylesheets/sections/_stats.scss
@@ -573,7 +573,9 @@ ul.module-tabs {
 			@include breakpoint( "<480px" ) {
 				clear: none;
 				float: right;
+				font-size: 16px;
 				margin-right: 24px;
+				padding: 0;
 			}
 		}
 
